added additional functions - Exp, power, sqrt, ln and changed the themes to better defaults (including Halo)

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Button dimensions -->
+    <dimen name="button_width">60dp</dimen>
+    <dimen name="button_height">60dp</dimen>
+
 </resources>
