--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,174 +14,205 @@
         android:text="@string/results_here"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:columnCount="4"
+        android:orientation="vertical"
         android:paddingTop="30dp" >
-
-        <!-- Row 0 -->
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="0"
-            android:onClick="buttonPress"
-            android:text="1" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_column="1"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="0"
-            android:onClick="buttonPress"
-            android:text="2" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="0"
-            android:onClick="buttonPress"
-            android:text="3" />
-
-        <Button
-            android:id="@+id/buttonPlus"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="0"
-            android:onClick="buttonPress"
-            android:text="+" />
 
         <!-- Row 1 -->
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:onClick="buttonPress"
-            android:text="4" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_column="1"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="1"
-            android:onClick="buttonPress"
-            android:text="5" />
+            <Button
+                android:id="@+id/buttonExp"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="Exp" />
 
-        <Button
-            android:id="@+id/button6"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="1"
-            android:onClick="buttonPress"
-            android:text="6" />
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="1" />
 
-        <Button
-            android:id="@+id/buttonMinus"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="1"
-            android:onClick="buttonPress"
-            android:text="-" />
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="2" />
 
-        <!-- Row 2 -->
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="3" />
 
-        <Button
-            android:id="@+id/button7"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="2"
-            android:onClick="buttonPress"
-            android:text="7" />
+            <Button
+                android:id="@+id/buttonPlus"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="+" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/button8"
-            android:layout_column="1"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="2"
-            android:onClick="buttonPress"
-            android:text="8" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/button9"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="2"
-            android:onClick="buttonPress"
-            android:text="9" />
+            <Button
+                android:id="@+id/buttonLn"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="Ln" />
 
-        <Button
-            android:id="@+id/buttonMult"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="2"
-            android:onClick="buttonPress"
-            android:text="*" />
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="4" />
 
-        <!-- Row 3 -->
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="5" />
 
-        <Button
-            android:id="@+id/button0"
-            android:layout_column="1"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="3"
-            android:onClick="buttonPress"
-            android:text="0" />
-        
-        <Button
-            android:id="@+id/buttonNeg"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="3"
-            android:onClick="buttonPress"
-            android:text="+/-" />
-        
-        
-        <Button
-            android:id="@+id/buttonDec"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="3"
-            android:onClick="buttonPress"
-            android:text="." />
-        
-        
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="6" />
 
-        <Button
-            android:id="@+id/buttonDiv"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="3"
-            android:onClick="buttonPress"
-            android:text="/" />
-    </GridLayout>
-<LinearLayout     
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:orientation="horizontal" 
-    android:paddingRight="30dp"
-    android:paddingLeft="30dp">
-        
-    <Button
-        android:id="@+id/buttonEnter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="buttonPress"
-        android:layout_weight="5"
-        android:text="Enter" />
+            <Button
+                android:id="@+id/buttonMinus"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="-" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonClear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="buttonPress"
-        android:text="C" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/buttonPow"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="x^y" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="7" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="8" />
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="9" />
+
+            <Button
+                android:id="@+id/buttonMult"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="*" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/buttonSqrt"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="Sqrt" />
+
+            <Button
+                android:id="@+id/buttonSign"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="+/-" />
+
+            <Button
+                android:id="@+id/button0"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="0" />
+
+            <Button
+                android:id="@+id/buttonDec"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="buttonPress"
+                android:text="." />
+
+            <Button
+                android:id="@+id/buttonDiv"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:onClick="calculate"
+                android:text="/" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp" >
+
+            <Button
+                android:id="@+id/buttonEnter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:onClick="buttonPress"
+                android:text="Enter" />
+
+            <Button
+                android:id="@+id/buttonClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonPress"
+                android:text="C" />
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
